@@ -389,7 +389,7 @@ CMPIStatus IndCIMXMLHandlerCreateInstance(CMPIInstanceMI * mi,
 
     // set the properties
     CMSetProperty(ciLocal, "SequenceContext", &scontext, CMPI_string);
-    CMPIValue zarro = {.sint64 = 0 };
+    CMPIValue zarro = {.sint64 = -1 };
     CMSetProperty(ciLocal, "LastSequenceNumber", &zarro, CMPI_sint64);
    }
 
@@ -876,7 +876,7 @@ CMPIStatus IndCIMXMLHandlerInvokeMethod(CMPIMethodMI * mi,
       CMPIValue lastseq = CMGetProperty(hdlr, "LastSequenceNumber", &st).value;
       lastseq.sint64++;
       // Handle wrapping of the signed int
-      if (lastseq.sint64 < 0) lastseq.sint64=1;
+      if (lastseq.sint64 < 0) lastseq.sint64=0;
       // Update the last used number in the handler
       CMSetProperty(hdlr, "LastSequenceNumber", &lastseq.sint64, CMPI_sint64);
       CBModifyInstance(_broker, ctxLocal, hop, hdlr, NULL);
