@@ -638,7 +638,6 @@ void initInterOp(
    op=CMNewObjectPath(broker,"root/interop","cim_indicationfilter",&st);
    ctxLocal = prepareUpcall((CMPIContext *)ctx);
    enm = _broker->bft->enumerateInstances(_broker, ctxLocal, op, NULL, &st);
-   CMRelease(ctxLocal);
    
    if(enm) {
       while(enm->ft->hasNext(enm, &st) && (ci=(enm->ft->getNext(enm, &st)).value.inst)) {
@@ -660,15 +659,18 @@ void initInterOp(
    if(enm) {
       while(enm->ft->hasNext(enm, &st) && (ci=(enm->ft->getNext(enm, &st)).value.inst)) {
          cop=CMGetObjectPath(ci,&st); 
+         // Reset the sequence numbers on sfcb restart
+         CMPIInstance *ldi = _broker->bft->getInstance(_broker, ctxLocal, cop, NULL, NULL);
+         CMPIValue zarro = {.sint64 = -1 };
+         CMSetProperty(ldi, "LastSequenceNumber", &zarro, CMPI_sint64);
+         CBModifyInstance(_broker, ctxLocal, cop, ldi, NULL);
          addHandler(ci,cop);
       }
       CMRelease(enm);
    } 
    _SFCB_TRACE(1,("--- checking for cim_indicationsubscription"));
    op=CMNewObjectPath(broker,"root/interop","cim_indicationsubscription",&st);
-   ctxLocal = prepareUpcall((CMPIContext *)ctx);
    enm = _broker->bft->enumerateInstances(_broker, ctxLocal, op, NULL, &st);
-   CMRelease(ctxLocal);
    
    if(enm) {
       while(enm->ft->hasNext(enm, &st) && (ci=(enm->ft->getNext(enm, &st)).value.inst)) {      
@@ -679,6 +681,7 @@ void initInterOp(
       }
       CMRelease(enm);   
    }
+   CMRelease(ctxLocal);
       
    _SFCB_EXIT(); 
 }
