@@ -314,9 +314,9 @@ fi
 
 # Check sequence numbers
 echo -n  "  Indication flood sequence numbers: "
-i=1
+i=0
 f=0
-while [ $i -lt $((lim+1)) ]
+while [ $i -lt $((lim)) ]
 do
     grep -A1 SequenceNumber $ODIR/SFCB_Listener.txt | grep '<VALUE>'$i'</VALUE>' > /dev/null 2>&1
     if [ $? -eq 0 ]
@@ -333,6 +333,7 @@ then
     echo "PASSED"
 else
     echo "$f missing: FAILED"
+    RC=1
 fi
 
 ###
